--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vueup/vue-quill": "^1.2.0",
+    "axios": "^1.6.7",
     "quill": "^2.0.0-rc.2",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
