--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "node --test test/",
-    "test:watch": "node --watch --test test/",
+    "test": "jest",
     "start": "node server",
-    "dev": "nodemon server"
+    "dev": "node --watch --no-warnings server"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +16,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.0"
+    "mongoose": "^8.2.0",
+    "sinon": "^17.0.1"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4"
   }
 }
