--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "pinia": "^2.1.7",
     "quill": "^2.0.0-rc.2",
     "vue": "^3.4.15",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.3",
